[tool.poetry]
name = "Quillify-API"
version = "0.1.0"
description = ""
authors = ["YuktaSharma <yuktasbc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.2"}
uvicorn =  {extras = ["standard"], version = "^0.23.2"}
python-dotenv = "^1.0.0"
requests = "^2.31.0"
openai = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
